--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,18 @@
 }
 
 body{
-    margin: 0 auto;    
+    margin: 0%auto;    
     max-width: 1200px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: lato;
     color: #333;
 }
 
 .icon-cart{
     width: 40px;
     height: 40px;
+    stroke: #000;
 }
+
 img{
     max-width: 100%;
 }
@@ -28,6 +30,57 @@ header{
     justify-content: space-between;
     padding: 30px 0 40px 0;
 }
+
+.container-icon{
+    position: relative;
+}
+
+.count-products{
+    position: absolute;
+    top: 55%;
+    right: 0;
+
+    background-color: #000;
+    color: #fff;
+    width: 25px;
+    height: 25px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+.container-cart-products{
+    position: absolute;
+    top: 50px;
+    right: 0;
+
+    background-color: #fff;
+    width: 400px;
+    z-index: 1;
+    
+}
+
+.cart-product{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px;
+
+}
+
+.info-cart-product{
+    display: flex;
+    justify-content: space-between;
+    flex: 0.8;
+}
+
+.icon-close{
+    width: 25px;
+    height: 25px;
+}
+
+
 /* Main */
 .container-items{
     display: grid;
@@ -35,3 +88,50 @@ header{
     gap: 20px;
 }
 
+.item{
+    border-radius: 10px;
+    background-color: #fff;
+}
+
+.item:hover{
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
+}
+
+
+.item img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
+    transition: all .5s;
+}
+
+.item figure{
+    overflow: hidden;
+}
+
+.item:hover img{
+    transform: scale(1.15)  ;
+}
+
+.info-product{
+    padding: 15px 30px;
+    line-height: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.prince{
+    font-size: 18px;
+    font-weight: 900;
+}
+
+.infoproduct button{
+    border: none;
+    background: none;
+    background-color: black;
+    color: #fff;
+    padding: 15px 10px;
+    cursor: pointer;
+}
