--- a/stylesdeinciodesecion.css
+++ b/stylesdeinciodesecion.css
@@ -24,6 +24,45 @@ body{
     width: 100px;
     height: 100px;
     border-radius: 50%;
+    position: absolute;
+    top:  -50px;
+    left: calc(50% - 50px);
 }
+.login-box h1 {
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 22px;
+}
+.login-box label{
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    display: block;
+}
+.login-box input {
+    width: 100%;
+    margin-bottom: 20px ;
+}
+.login-box input[type="text"],
+.login-box input[type="password"] {
+    border: none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: #fff;
+    font-size: 16px;
+}
+.login-box input[type="sumbit"] {
+    border: none;
+    outline: none;
+    height: 40px;
+    background: #901eaf;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 20px;
+}    
+
 
 
