--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,12 @@ body{
     stroke: #000;
 }
 
+.icon-cart:hover{
+  cursor: pointer;
+}
+
+
+
 img{
     max-width: 100%;
 }
@@ -37,25 +43,26 @@ header{
 
 .count-products{
     position: absolute;
-    top: 55%;
+    top: 40%;
     right: 0;
 
     background-color: #000;
     color: #fff;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
 
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 50%;
+    border-radius: 60%;
 }
 
 .container-cart-products{
     position: absolute;
-    top: 50px;
+    top: 60px;
     right: 0;
-
+    
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
     background-color: #fff;
     width: 400px;
     z-index: 1;
@@ -65,19 +72,64 @@ header{
 .cart-product{
     display: flex;
     justify-content: space-between;
-    padding: 30px;
+    padding: 25px;
+    align-items: center;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.20);
+}
 
+.hidden-cart{
+  display: none;
 }
 
 .info-cart-product{
     display: flex;
     justify-content: space-between;
-    flex: 0.8;
+    background-color: #fff;
+    flex: 0.95;
+    align-items: center;
+}
+
+.titulo-producto-carrito{
+font-size: 19px;
+font-weight: 500;
+margin: 15px;
+
+
+}
+
+.precio-producto-carrito{
+font-weight: 400;
+font-size: 19px;
+margin-left: 10px;  
+margin-right: 10px;
+
+}
+
+.cantidad-producto-carrito{
+font-weight: 500;
+font-size: 19px;
 }
 
 .icon-close{
     width: 25px;
     height: 25px;
+}
+
+.icon-close:hover{
+  stroke: rgb(255, 0, 212);
+}
+
+.cart-total{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0;
+  gap: 20px;
+}
+
+.total-pagar{
+  font-size: 20px;
+  font-weight: 900;
 }
 
 
@@ -114,12 +166,13 @@ header{
     transform: scale(1.15)  ;
 }
 
-.info-product{
+.infoproduct{
     padding: 15px 30px;
     line-height: 2;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    font-size: 15px;
 }
 
 .prince{
@@ -135,3 +188,113 @@ header{
     padding: 15px 10px;
     cursor: pointer;
 }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  html{
+    font-size: 62.5%;
+  }
+  .container{
+    width: 100%;
+    height: 100vh;
+    background-color: #C4C4C4;
+    font-family: 'Share Tech', sans-serif;
+    min-width: 1200px;
+    position: relative;
+  }
+  .logo{
+    font-weight: 600;
+    font-size: 3.8rem;
+  }
+  nav{
+    padding: 20px 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  ul li{
+    display: inline-block;
+    list-style: none;
+    padding: 6px 20px;
+    font-weight: 500;
+    font-size: 1.7rem;
+    text-decoration: underline;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+  }
+  ul li:hover{
+    background-color: #ff4321;
+    border-radius: 25px;
+    text-decoration: none;
+  }
+
+  
+  header h1{
+    font-size: 7rem;
+  }
+  header h2{
+    font-size: 4rem;
+  }
+  header p{
+    font-size: 1.5rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  header button{
+    padding: 0 5px;
+    width: 140px;
+    height: 40px;
+    border: 0;
+    outline: none;
+    color: #fff;
+    font-weight: 500;
+    border: none;
+    cursor: pointer;
+    background-color: #ff4321;
+    border-radius: 25px;
+    transition: width 0.5s;
+  }
+  button img{
+    display: none;
+  }
+  button:hover img{
+    display: block;
+  }
+  header button:hover{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 160px;
+  }
+  
+  .container .emp{
+    position: absolute;
+    height: 600px;
+    width: 550px;
+    right: 7%;
+    bottom: 0;
+    z-index: 999;
+  }
+  .container .fondo-emp{
+    position: absolute;
+    height: 550px;
+    width: 550px;
+    right: 4%;
+    bottom: 0;
+  }
+  .icons{
+    position: absolute;
+    bottom: 8%;
+    padding: 0 50px;
+  }
+  .icons i{
+    font-size: 2.5rem;
+    padding: 0 10px;
+    cursor: pointer;
+  }
+  .icons i:hover{
+    color: #ff4321;
+    transition: all 0.3s ease 0s;
+  }
