--- a/styles1.css
+++ b/styles1.css
@@ -11,13 +11,17 @@ body{
     margin: 0%auto;    
     max-width: 1200px;
     font-family: lato;
-    color: #333;
+    color: #0f0f0f;
+    background-color: #1d15152f;
 }
 
 .icon-cart{
-    width: 40px;
-    height: 40px;
+    width: 46px;
+    height: 46px;
     stroke: #000;
+    border-right: 20px;
+    margin-right: 40px;
+    margin-top: 12px;
 }
 
 .icon-cart:hover{
@@ -34,7 +38,10 @@ img{
 header{
     display: flex;
     justify-content: space-between;
-    padding: 30px 0 40px 0;
+    padding: 20px 0 20px 0;
+    background-color: rgba(91, 95, 95, 0.363);
+    border-bottom: #000000;
+    margin-bottom: 40px;
 }
 
 .container-icon{
@@ -43,13 +50,14 @@ header{
 
 .count-products{
     position: absolute;
-    top: 40%;
+    top: 65%;
     right: 0;
+    margin-right: 34px;
 
     background-color: #000;
     color: #fff;
-    width: 20px;
-    height: 20px;
+    width: 22px;
+    height: 22px;
 
     display: flex;
     justify-content: center;
@@ -84,7 +92,6 @@ header{
 .info-cart-product{
     display: flex;
     justify-content: space-between;
-    background-color: #fff;
     flex: 0.95;
     align-items: center;
 }
@@ -199,7 +206,7 @@ font-size: 19px;
   .container{
     width: 100%;
     height: 100vh;
-    background-color: #C4C4C4;
+    background-color: #850000;
     font-family: 'Share Tech', sans-serif;
     min-width: 1200px;
     position: relative;
@@ -207,6 +214,7 @@ font-size: 19px;
   .logo{
     font-weight: 600;
     font-size: 3.8rem;
+    
   }
   nav{
     padding: 20px 50px;
@@ -232,7 +240,10 @@ font-size: 19px;
 
   
   header h1{
-    font-size: 7rem;
+    font-size: 55px;
+    font-style: normal;
+    color: #000000;
+    margin-left: 15px;
   }
   header h2{
     font-size: 4rem;
