--- a/styles1.css
+++ b/styles1.css
@@ -214,7 +214,12 @@ font-size: 19px;
   .logo{
     font-weight: 600;
     font-size: 3.8rem;
-    
+  }
+  body nav{
+    height: 50px;
+    margin: 0;
+    padding: 0;
+  
   }
   nav{
     padding: 20px 50px;
