--- a/stylescalzados.css
+++ b/stylescalzados.css
@@ -1,4 +1,3 @@
-
 *::after
 *::before
 *{
@@ -13,6 +12,9 @@ body{
     font-family: lato;
     color: #0f0f0f;
     background-color: #1d15152f;
+    background: url(https://i.pinimg.com/originals/e8/31/aa/e831aadce2bef7bc16d5abe39b626037.jpg); 
+    background-size: cover;
+    background-position: center
 }
 
 .icon-cart{
@@ -39,7 +41,7 @@ header{
     display: flex;
     justify-content: space-between;
     padding: 20px 0 20px 0;
-    background-color: rgba(7, 26, 197, 0.548);
+    background-color: rgba(255, 255, 255, 0.747);
     border-bottom: #000000;
     margin-bottom: 40px;
 }
