--- a/styles2 .css
+++ b/styles2 .css
@@ -86,8 +86,8 @@ header button:hover{
 
 .container .emp{
   position: absolute;
-  height: 600px;
-  width: 550px;
+  height: 800px;
+  width: 1000px;
   right: 7%;
   bottom: 0;
   z-index: 999;
@@ -112,4 +112,7 @@ header button:hover{
 .icons i:hover{
   color: #ff4321;
   transition: all 0.3s ease 0s;
+}
+header {
+  font-size: 40px;
 }
