--- a/styles2 .css
+++ b/styles2 .css
@@ -46,11 +46,10 @@ header{
  padding: 0 50px;
 }
 header h1{
-  font-size: 7rem;
-  font-size: small;
+  font-size: 60px;
 }
-header h2{
-  font-size: 4rem;
+.container h2{
+  font-size: 30px;
 }
 header p{
   font-size: 1.5rem;
@@ -115,4 +114,7 @@ header button:hover{
 }
 header {
   font-size: 40px;
+}
+.letras{
+  font-size: 25px;
 }
