--- a/stylescalzados.css
+++ b/stylescalzados.css
@@ -1,20 +1,15 @@
-*::after
-*::before
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body nav{
+  background-color: rgb(255, 255, 255);
 }
 
 body{
-    margin: 0%auto;    
-    max-width: 1200px;
-    font-family: lato;
-    color: #0f0f0f;
-    background-color: #1d15152f;
-    background: url(https://i.pinimg.com/originals/e8/31/aa/e831aadce2bef7bc16d5abe39b626037.jpg); 
-    background-size: cover;
-    background-position: center
+  margin: 0%auto;    
+  font-family: lato;
+  color: #000000;
+  background: url(https://i.pinimg.com/originals/e8/31/aa/e831aadce2bef7bc16d5abe39b626037.jpg); 
+  background-size: cover;
+  background-position: center;
+  max-width: 1200px;
 }
 
 .icon-cart{
@@ -30,20 +25,18 @@ body{
   cursor: pointer;
 }
 
-
-
 img{
     max-width: 100%;
 }
-
 
 header{
     display: flex;
     justify-content: space-between;
     padding: 20px 0 20px 0;
-    background-color: rgba(255, 255, 255, 0.747);
-    border-bottom: #000000;
+    background-color: rgba(45, 216, 11, 0.89);
     margin-bottom: 40px;
+    max-width: 1200px;
+    border: 3px solid #00000086;
 }
 
 .container-icon{
@@ -55,28 +48,14 @@ header{
     top: 65%;
     right: 0;
     margin-right: 34px;
-
     background-color: #000;
     color: #fff;
     width: 22px;
     height: 22px;
-
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 60%;
-}
-
-.container-cart-products{
-    position: absolute;
-    top: 60px;
-    right: 0;
-    
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
-    background-color: #fff;
-    width: 400px;
-    z-index: 1;
-    
 }
 
 .cart-product{
@@ -86,62 +65,6 @@ header{
     align-items: center;
     border-bottom: 1px solid rgba(0, 0, 0, 0.20);
 }
-
-.hidden-cart{
-  display: none;
-}
-
-.info-cart-product{
-    display: flex;
-    justify-content: space-between;
-    flex: 0.95;
-    align-items: center;
-}
-
-.titulo-producto-carrito{
-font-size: 19px;
-font-weight: 500;
-margin: 15px;
-
-
-}
-
-.precio-producto-carrito{
-font-weight: 400;
-font-size: 19px;
-margin-left: 10px;  
-margin-right: 10px;
-
-}
-
-.cantidad-producto-carrito{
-font-weight: 500;
-font-size: 19px;
-}
-
-.icon-close{
-    width: 25px;
-    height: 25px;
-}
-
-.icon-close:hover{
-  stroke: rgb(255, 0, 212);
-}
-
-.cart-total{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px 0;
-  gap: 20px;
-}
-
-.total-pagar{
-  font-size: 20px;
-  font-weight: 900;
-}
-
-
 
 .container-items{
     display: grid;
@@ -164,15 +87,13 @@ font-size: 19px;
     height: 300px;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
-    transition: all .5s;
+    transition: all .4s;
 }
 
-.item figure{
-    overflow: hidden;
-}
+
 
 .item:hover img{
-    transform: scale(1.15)  ;
+    transform: scale(1.02)  ;
 }
 
 .infoproduct{
@@ -182,11 +103,7 @@ font-size: 19px;
     flex-direction: column;
     gap: 10px;
     font-size: 15px;
-}
-
-.prince{
-    font-size: 18px;
-    font-weight: 900;
+    background-color: #00e49f33;
 }
 
 .infoproduct button{
@@ -208,33 +125,25 @@ font-size: 19px;
   .container{
     width: 100%;
     height: 100vh;
-    background-color: #850000;
+    background-color: #85000000;
     font-family: 'Share Tech', sans-serif;
     min-width: 1200px;
     position: relative;
   }
-  .logo{
-    font-weight: 600;
-    font-size: 3.8rem;
-  }
-  body nav{
-    height: 50px;
-    margin: 0;
-    padding: 0;
-  
-  }
+
   nav{
-    padding: 20px 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    padding: 10px;
+    text-align: right;
+    color: #fff;
+    width: 100%;
   }
+
   ul li{
     display: inline-block;
     list-style: none;
     padding: 6px 20px;
     font-weight: 500;
-    font-size: 1.7rem;
+    font-size: 2rem;
     text-decoration: underline;
     cursor: pointer;
     transition: all 0.3s ease 0s;
@@ -252,14 +161,7 @@ font-size: 19px;
     color: #000000;
     margin-left: 15px;
   }
-  header h2{
-    font-size: 4rem;
-  }
-  header p{
-    font-size: 1.5rem;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
+
   header button{
     padding: 0 5px;
     width: 140px;
