--- a/stylesdeinciodesecion.css
+++ b/stylesdeinciodesecion.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background: url(../proyecto/imagenes/cr.jpg) no-repeat center top;
+    background: url(../proyecto-main/imagenes/cr.jpg) no-repeat center top;
     background-size: cover;
     font-family: sans-serif;
     height: 100vh;
@@ -19,11 +19,13 @@ body{
     transform: translate(-50%, -50%);
     box-sizing: border-box;
     padding: 70px 30px;
+    border-color: #fff;
+    border-radius: 10%;
 }
 .login-box .avatar {
     width: 100px;
     height: 100px;
-    border-radius: 50%;
+    border-radius: 100%;
     position: absolute;
     top:  -50px;
     left: calc(50% - 50px);
@@ -58,7 +60,7 @@ body{
     border: none;
     outline: none;
     height: 40px;
-    background: #901eaf;
+    background: #142c7a;
     color: #fff;
     font-size: 18px;
     border-radius: 20px;
