--- a/Mujeres/styles.css
+++ b/Mujeres/styles.css
@@ -61,7 +61,7 @@ body{
 
 
 .cuadro-container{
-    background-image: url("imagenes/d1.jpg");   
+    background-image: url("images/d1.jpg");   
     background-position: center bottom;
     background-repeat: no-repeat;
     background-size: cover;
