--- a/Index/styles2.css
+++ b/Index/styles2.css
@@ -35,6 +35,7 @@ ul li{
 
   transition: all 0.3s ease 0s;
 }
+/*nuevo agregado*/
 ul li:hover{ /*aqui acemos el efecto del al pasar el cursor
               se va aser sale un retangulo de color negro*/
   background-color: #0a0909;
@@ -58,6 +59,7 @@ header p{
   margin-top: 20px;
   margin-bottom: 20px;
 }
+/*nuevo agregado*/
 header button{
   padding: 0 5px;
   width: 140px;
@@ -108,6 +110,7 @@ img {
   transition: 4s;
 
 }
+/*nuevo agregado*/
 img:hover { /*aqui ise para agrandar y regresar asu forma normal la imagen*/
   transform: scale(1.1);
   transition: 4s;
