--- a/Calzado/stylescalzados.css
+++ b/Calzado/stylescalzados.css
@@ -43,22 +43,6 @@ header{ /*Todo lo que tiene que ver con el encabezado*/
     position: relative;
 }
 
-.count-products{ /*El numero contador del carrito */
-    position: absolute;
-    top: 65%;
-    right: 0;
-    margin-right: 34px;
-    background-color: #000;
-    color: #fff;
-    width: 22px;
-    height: 22px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 60%;
-}
-
-
 .container-items{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -145,26 +129,25 @@ header{ /*Todo lo que tiene que ver con el encabezado*/
 
   
   header h1{
-    font-size: 50px;
+    font-size: 70px;
     font-style: italic;
     color: #000000;
     margin-left: 15px;
+    align-content: center;
   }
 
   header button{
     padding: 0 5px;
-    width: 140px;
+    width: 130px;
     height: 40px;
     border: 0;
     outline: none;
     color: #fff;
-    font-weight: 500;
-    border: none;
     cursor: pointer;
-    background-color: #ff4321;
+    background-color: #ff2600;
     border-radius: 25px;
-    transition: width 0.5s;
   }
+
   button img{
     display: none;
   }
@@ -177,4 +160,21 @@ header{ /*Todo lo que tiene que ver con el encabezado*/
     justify-content: space-between;
     width: 160px;
   }
+  
+#carrito {
+    background-color: rgba(255, 249, 249, 0.952);
+    padding: 1rem;
+    border: 1px solid #ccc;
+    font-size: 15px;
+}
 
+#carrito-lista {
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+#carrito-lista th, #carrito-lista td {
+    border: 1px solid #ccc;
+    padding: 0.5rem;
+    text-align: center;
+}
