--- a/Niños/estilo.css
+++ b/Niños/estilo.css
@@ -61,6 +61,43 @@ body{
 
 
 
+/*barra de busqueda */
+
+.search-container {
+    background: #fff;
+    padding: 3px;
+    border-radius: 6px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    display: flex;
+    overflow: hidden;
+  }
+
+  .search-container input[type="text"] {
+    border: none;
+    padding: 5px;
+    width: 130px;
+    font-size: 16px;
+    outline: none;
+  }
+
+  .search-container button {
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 0 20px 20px 0;
+  }
+
+  .search-container button:hover {
+    background-color:#ffcc00;
+  }
+
+
+
+  /* titulo y fotos*/
+
+
 
 
 .titulo1{
@@ -178,7 +215,51 @@ img{
 }
 
 
-img:hover {
+.imagen-con-trasicion:hover {
     transform: scale(1.1);
     transition: 4s;
   }
+
+
+  /*cuadro de carrusel*/
+
+.n{
+    padding: 40px;
+}
+
+.contenedor{
+    padding: 40px;
+    width: 100%;
+    position: relative;
+    height: 700px;
+}
+.botones{
+    font-size: 30px;
+    width: 70px;
+    height: 70px;
+    line-height:70px;
+    border-radius:50%;
+    background-color: rgba(0,0,0,.7);
+    text-align: center;
+    font-weight: bold;
+    position: absolute;
+    color: #fff;
+    box-shadow: 0 0 10px rgb(255,255,255,.6);
+    -webkit-transition: all .3s ease;
+    -o-transition: all.3s aese;
+    transition: all .3s aese;
+    cursor: pointer;
+}
+
+.botones.hover{
+    cursor: pointer;
+    transform: scale(1.2,1.2);
+}
+.atras{
+    left: 2%;
+    top:calc(50%-70%)
+}
+.adelante{
+    right: 2%;
+    top:calc(50%-70%)
+}
