--- a/Niños/estilo.css
+++ b/Niños/estilo.css
@@ -19,12 +19,8 @@ body{
     padding: 0;
 }
 
-.boton-compra {
-    display: inline-block;
-    padding: 10px 20px;
-    color: black;
-    text-decoration: none; /* quitar el subrayado */
-}
+
+
 
 .menu-container {
     color: white ;
@@ -148,6 +144,16 @@ body{
 
 
 
+.comprar-link {
+    display: inline-block;
+    padding: 10px 20px;
+    border: 2px solid black;
+    border-radius: 50px; /* para hacer el borde ovalado */
+    color: black;
+    text-decoration: none; /* quitar el subrayado */
+
+}
+
 
 .s{
     padding: 30px;
@@ -227,43 +233,26 @@ img{
 
   /*cuadro de carrusel*/
 
-.n{
-    padding: 40px;
-}
-
-.contenedor{
-    padding: 40px;
-    width: 100%;
-    position: relative;
-    height: 700px;
-}
-.botones{
-    font-size: 30px;
-    width: 70px;
-    height: 70px;
-    line-height:70px;
-    border-radius:50%;
-    background-color: rgba(0,0,0,.7);
-    text-align: center;
-    font-weight: bold;
-    position: absolute;
-    color: #fff;
-    box-shadow: 0 0 10px rgb(255,255,255,.6);
-    -webkit-transition: all .3s ease;
-    -o-transition: all.3s aese;
-    transition: all .3s aese;
-    cursor: pointer;
-}
-
-.botones.hover{
-    cursor: pointer;
-    transform: scale(1.2,1.2);
-}
-.atras{
-    left: 2%;
-    top:calc(50%-70%)
-}
-.adelante{
-    right: 2%;
-    top:calc(50%-70%)
-}
+  .gallery {
+    display: flex;
+    width: 600px;
+    height: 460px;
+    
+    
+  
+  }
+  
+  .gallery img {
+    width:300px;
+    flex-grow: 2;
+    object-fit: cover;
+    opacity: none;
+    transition: 0.5s ease;
+  }
+  
+  .gallery img:hover {
+    cursor: crosshair;
+    width: 350px;
+    opacity: 1;
+    filter: contrast(120%);
+  }
